--- a/Ex1.html
+++ b/Ex1.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Atividade Formativa</title>
 </head>
 <body>
-    
+    <h1>Atividades</h1>
+    <h2>Atividade 2</h2>
+    <img src="/Atividade 2.png" >
+    <img src="/Atividade 2.1.png" >
+
+    <h2>Atividade 3</h2>
+    <img src="/Atividade 3 cal.png" alt="">
+    <img src="/Atividade 3.png" alt="">
+
+    <h2>Atividade 4</h2>
+    <img src="/Atividade 4.png" alt="">
+
+    <h2>Atividade 5</h2>
+    <img src="/MinhaAreaDeTrabalho.png..png" alt="">
+    <img src="/FundoAreaDeTrabalho.png" alt="">
+
+    <h2>Atividade 6</h2>
+    <img src="" alt="">
+
+    <h2>Atividade 7</h2>
+    <img src="/GerenciadorTarefas.png" alt="">
+    <p>Não possui nenhuma dificuldade em organizar as janelas</p>
+
+    <h2>Atividade 8</h2>
+    <img src="/MeuDesenho.png" alt="">
+    <img src="/Atividade 8.png" alt="">
+
+    <h2>Atividade 9</h2>
+    <img src="/Atividade 9.png" alt="">
+
+    <h2>Atividade 10</h2>
+    <img src="/Atividade 10.png" alt="">
+    <img src="/Atividade 10.2.png" alt="">
+
+
+
+    <h2></h2>
+
 </body>
 </html>
