--- a/Ex1.html
+++ b/Ex1.html
@@ -8,41 +8,41 @@
 <body>
     <h1>Atividades</h1>
     <h2>Atividade 2</h2>
-    <img src="/Atividade 2.png" >
-    <img src="/Atividade 2.1.png" >
+    <img src="/Imagens/Atividade 2 doc.png" >
+    <img src="/Imagens/Atividade 2.1.png" >
 
     <h2>Atividade 3</h2>
-    <img src="/Atividade 3 cal.png" alt="">
-    <img src="/Atividade 3.png" alt="">
+    <img src="/Imagens/Atividade 3 cal.png" alt="">
+    <img src="/Imagens/Atividade 3.png" alt="">
 
     <h2>Atividade 4</h2>
-    <img src="/Atividade 4.png" alt="">
+    <img src="/Imagens/Atividade 4.png" alt="">
 
     <h2>Atividade 5</h2>
-    <img src="/MinhaAreaDeTrabalho.png..png" alt="">
-    <img src="/FundoAreaDeTrabalho.png" alt="">
+    <img src="/Imagens/MinhaAreaDeTrabalho.png..png" alt="">
+    <img src="/Imagens/FundoAreaDeTrabalho.png" alt="">
 
     <h2>Atividade 6</h2>
-    <img src="" alt="">
+    <img src="/Imagens/ATV6.png" alt="">
+    <img src="/Imagens/ATV_6.png" alt="">
 
     <h2>Atividade 7</h2>
-    <img src="/GerenciadorTarefas.png" alt="">
+    <img src="/Imagens/GerenciadorTarefas.png" alt="">
     <p>Não possui nenhuma dificuldade em organizar as janelas</p>
 
     <h2>Atividade 8</h2>
-    <img src="/MeuDesenho.png" alt="">
-    <img src="/Atividade 8.png" alt="">
+    <img src="/Imagens/MeuDesenho.png" alt="">
+    <img src="/Imagens/Atividade 8.png" alt="">
 
     <h2>Atividade 9</h2>
-    <img src="/Atividade 9.png" alt="">
+    <img src="/Imagens/Atividade 9.png" alt="">
 
     <h2>Atividade 10</h2>
-    <img src="/Atividade 10.png" alt="">
-    <img src="/Atividade 10.2.png" alt="">
+    <img src="/Imagens/Atividade 10.png" alt="">
+    <img src="/Imagens/Atividade 10.2.png" alt="">
 
-
-
-    <h2></h2>
+    <h2>Atividade 11</h2>
+    <img src="/Imagens/Atividade 11.png" alt="">
 
 </body>
 </html>
