--- a/Ex1.html
+++ b/Ex1.html
@@ -1,48 +1,161 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade Formativa</title>
+    <title>Atividade Somativa</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f4f8;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+            margin-bottom: 30px;
+        }
+
+        .activity {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        h2 {
+            color: #444;
+            margin-top: 20px;
+        }
+
+        img {
+            width: 100%;
+            max-width: 400px;
+            display: block;
+            margin-bottom: 10px;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        p {
+            background: #fff;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+        }
+    </style>
 </head>
 <body>
-    <h1>Atividades</h1>
-    <h2>Atividade 2</h2>
-    <img src="/Imagens/Atividade 2 doc.png" >
-    <img src="/Imagens/Atividade 2.1.png" >
 
-    <h2>Atividade 3</h2>
-    <img src="/Imagens/Atividade 3 cal.png" alt="">
-    <img src="/Imagens/Atividade 3.png" alt="">
+    <div class="activity">
+        <h1>Atividades</h1>
 
-    <h2>Atividade 4</h2>
-    <img src="/Imagens/Atividade 4.png" alt="">
+        <h2>Atividade 2</h2>
+        <img src="Imagens/Atividade 2 doc.png" alt="Atividade 2">
+        <img src="Imagens/Atividade 2.1.png" alt="Atividade 2.1">
 
-    <h2>Atividade 5</h2>
-    <img src="/Imagens/MinhaAreaDeTrabalho.png..png" alt="">
-    <img src="/Imagens/FundoAreaDeTrabalho.png" alt="">
+        <h2>Atividade 3</h2>
+        <img src="Imagens/Atividade 3 cal.png" alt="Atividade 3 cal">
+        <img src="Imagens/Atividade 3.png" alt="Atividade 3">
 
-    <h2>Atividade 6</h2>
-    <img src="/Imagens/ATV6.png" alt="">
-    <img src="/Imagens/ATV_6.png" alt="">
+        <h2>Atividade 4</h2>
+        <img src="Imagens/Atividade 4.png" alt="Atividade 4">
 
-    <h2>Atividade 7</h2>
-    <img src="/Imagens/GerenciadorTarefas.png" alt="">
-    <p>Não possui nenhuma dificuldade em organizar as janelas</p>
+        <h2>Atividade 5</h2>
+        <img src="Imagens/MinhaAreaDeTrabalho.png..png" alt="Minha Área de Trabalho">
+        <img src="Imagens/FundoAreaDeTrabalho.png" alt="Fundo Área de Trabalho">
 
-    <h2>Atividade 8</h2>
-    <img src="/Imagens/MeuDesenho.png" alt="">
-    <img src="/Imagens/Atividade 8.png" alt="">
+        <h2>Atividade 6</h2>
+        <img src="Imagens/ATV6.png" alt="ATV6">
+        <img src="Imagens/ATV_6.png" alt="ATV 6">
 
-    <h2>Atividade 9</h2>
-    <img src="/Imagens/Atividade 9.png" alt="">
+        <h2>Atividade 7</h2>
+        <img src="Imagens/GerenciadorTarefas.png" alt="Gerenciador de Tarefas">
+        <p>Não possui nenhuma dificuldade em organizar as janelas.</p>
 
-    <h2>Atividade 10</h2>
-    <img src="/Imagens/Atividade 10.png" alt="">
-    <img src="/Imagens/Atividade 10.2.png" alt="">
+        <h2>Atividade 8</h2>
+        <img src="Imagens/MeuDesenho.png" alt="Meu Desenho">
+        <img src="Imagens/Atividade 8.png" alt="Atividade 8">
 
-    <h2>Atividade 11</h2>
-    <img src="/Imagens/Atividade 11.png" alt="">
+        <h2>Atividade 9</h2>
+        <img src="Imagens/Atividade 9.png" alt="Atividade 9">
+
+        <h2>Atividade 10</h2>
+        <img src="Imagens/Atividade 10.png" alt="Atividade 10">
+        <img src="Imagens/Atividade 10.2.png" alt="Atividade 10.2">
+
+        <h2>Atividade 11</h2>
+        <img src="Imagens/Atividade 11.png" alt="Atividade 11">
+
+        <h2>Questão 1</h2>
+        <p>
+            Código Aberto: São códigos acessíveis, que podem ser modificados e distribuídos.<br>
+            Código Fechado: São códigos que só pessoas autorizadas podem acessar e modificar.
+        </p>
+
+        <h2>Questão 2</h2>
+        <p>
+            Ubuntu: Personalização, escolha de programas, drivers na instalação.<br>
+            Windows: Processo mais fácil e pronto, com licença e drivers automáticos na maioria.
+        </p>
+
+        <h2>Questão 3</h2>
+        <p>
+            Texto: Mais rápido e controlado, mas difícil de aprender. Bom para servidores.<br>
+            Interface gráfica: Fácil de usar, intuitivo, ideal para tarefas simples.
+        </p>
+
+        <h2>Questão 4</h2>
+        <p>
+            No sistema Windows, a estrutura de diretórios é organizada de forma a separar os componentes principais do sistema e os dados dos usuários. Enquanto no Linux, a organização é diferente e segue uma lógica mais padronizada.
+        </p>
+
+        <h2>Questão 5</h2>
+        <p>
+            Gerenciamento: controla quem usa o sistema e quais recursos pode acessar.<br>
+            Windows: usa permissões específicas por arquivo/diretório.<br>
+            Linux: usa permissões para proprietário, grupo e outros, controlando leitura, escrita e execução.
+        </p>
+
+        <h2>Questão 6</h2>
+        <p>
+            Para ligar, verifica-se o hardware; carrega o sistema; apresenta a tela inicial. Sistemas fechados e abertos fazem basicamente o mesmo, mas com componentes específicos.
+        </p>
+
+        <h2>Questão 7</h2>
+        <p>
+            1. Unidades e pastas em rede: Recursos que podem ser acessados por vários computadores na rede, facilitando o compartilhamento de arquivos.<br>
+            2. Compartilhamento e acesso: Compartilhamento é disponibilizar recursos, acesso é a permissão de usar esses recursos por usuários autorizados.<br>
+            3. Mapeamento: Associar uma unidade de rede a uma letra do seu sistema para acesso fácil.
+        </p>
+        <img src="Imagens/Atividade 7.1.png" alt="Atividade 7.1">
+
+        <h2>Questão 8</h2>
+        <p>
+            1. Segurança cibernética é o conjunto de práticas para proteger sistemas e dados contra ameaças.<br>
+            2. Tipos de ameaças: vírus, malware, phishing, ransomware, ataques DDoS.<br>
+            3. Vulnerabilidades são fraquezas que podem ser exploradas por atacantes.<br>
+            4. Credenciais são informações de login; protegê-las previne acessos não autorizados.<br>
+            5. Engenharia social: manipulação para obter informações; exemplos: phishing, ligações falsas.
+        </p>
+
+        <h2>Questão 9</h2>
+        <p>
+            Para aumentar a segurança: usar antivírus, atualizações constantes, backups, senhas fortes e firewalls. Um firewall do sistema monitora e controla o tráfego de rede, bloqueando acessos não autorizados.
+        </p>
+
+        <h2>Questão 10</h2>
+        <p>
+            Configuração de firewall e antivírus;<br>
+            Controle de contas e permissões;<br>
+            Configurações de rede e conexão;<br>
+            Atualizações de segurança;<br>
+            Otimização de desempenho (serviços, inicialização).
+        </p>
+    </div>
 
 </body>
 </html>
